SEO, mixin, extend

--- a/index.html
+++ b/index.html
@@ -3,10 +3,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EstudioZF</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="shortcut icon" href="Images/IconoZF2.png" type="image/x-icon">
     <meta name="viewport" content="initial-scale=1">
+    <!-- ETIQUETAS SEO -->
+	<meta name="description" content="Sitio Oficial del Estudio Contable Impositivo Laboral y Tirbutario Zelido & Figueroa de la Vega ubicado en San Isidro Buenos Aires">
+	<meta name="keyword" content="Contabilidad, Monotributo, Estudio Contable">
+    <!-- TITULO -->
+    <title>EstudioZF</title>
+    <!-- BOOTSTRAP -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- Icon -->
+    <link rel="shortcut icon" href="Images/IconoZF2.png" type="image/x-icon">
+    <!-- CSS -->
     <link rel="stylesheet" href="CSS/Style.css">
     
 </head>
@@ -57,7 +64,7 @@
     <section class="indexCard">
         <div class="card">
             <div class="subTitle">
-                <a class="subTitle" href="Pages/servicios.html"><h2>Servicios</h2></a>
+                <a class="subTitle" href="Pages/servicios.html"><h2>Servicios Contables</h2></a>
             </div>
             <div class="cardBody">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit magnam debitis corrupti eum nam sed officiis, repudiandae omnis maiores ipsam fugiat blanditiis vero dolorem, modi reprehenderit incidunt accusamus ab voluptates!</p>
@@ -68,7 +75,7 @@
     <section class="indexCard">
         <div class="card">
             <div class="subTitle">
-                <a class="subTitle" href="Pages/nosotros.html"><h2>Nuestra Empresa</h2></a>
+                <a class="subTitle" href="Pages/nosotros.html"><h2>Nuestro Estudio</h2></a>
             </div>
             <div class="cardBody">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit magnam debitis corrupti eum nam sed officiis, repudiandae omnis maiores ipsam fugiat blanditiis vero dolorem, modi reprehenderit incidunt accusamus ab voluptates!</p>
@@ -79,7 +86,7 @@
     <section class="indexCard">
         <div class="card">
             <div class="subTitle">
-                <a class="subTitle" href="Pages/contacto.html"><h2>Contacto</h2></a>
+                <a class="subTitle" href="Pages/contacto.html"><h2>Contactanos</h2></a>
             </div>
             <div class="cardBody">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit magnam debitis corrupti eum nam sed officiis, repudiandae omnis maiores ipsam fugiat blanditiis vero dolorem, modi reprehenderit incidunt accusamus ab voluptates!</p>
