carrousel en clientes, arreglos diseno, arreglos texto, correcion keywords y descrip

--- a/Pages/nosotros.html
+++ b/Pages/nosotros.html
@@ -3,9 +3,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="initial-scale=1">
+	<meta name="description" content="Sitio Oficial del Estudio Contable Impositivo Laboral y Tirbutario Zelido & Figueroa de la Vega ubicado en San Isidro Buenos Aires">
+	<meta name="keyword" content="Contabilidad, Monotributo, Estudio Contable">
     <title>EstudioZF</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <meta name="viewport" content="initial-scale=1">
     <link rel="stylesheet" href="../CSS/Style.css">
 </head>
 <body>
@@ -53,7 +55,16 @@
                         <h2>Nosotros</h2>
                     </div>
                     <div class="cardBody">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit magnam debitis corrupti eum nam sed officiis, repudiandae omnis maiores ipsam fugiat blanditiis vero dolorem, modi reprehenderit incidunt accusamus ab voluptates!</p>
+                        <p>Estudio Zelido & Figueroa nace de una amistad y un sueño en común.
+                            En el año 2010, y después de años de mucho esfuerzo, Mercedes Figuroa y Luciana Zelido deciden asociarse para formar un estudio contable con experiencia y reputación. 
+                            Como pasa con muchos emprendedores, empezamos en una pequeña oficina y con pocos clientes, mayoritariamente familiares y amigos.
+                            Con el tiempo, a través de nuestro espíritu emprendedor, la constante capacitación, el continuo mejoramiento de las propuestas, la inversión en tecnología y fundamentalmente la confianza de nuestros clientes logramos posicionarnos en el mercado. Ese fue el punto de partida de nuestro crecimiento, no solo como profesionales, sino también como equipo de trabajo e incluso como personas.
+                            <br>
+                            Actualmente somos cinco personas quienes conformamos un equipo expecional: Antonela, Rosario, Victoria, Luciana y Mercedes.
+                            <br>
+                            <br>
+                            
+                            Nuestro propósito es seguir en el camino del crecimiento permanente sobre la base del compromiso y responsabilidad en el trabajo diario, la buena atención y la mejora de propuestas enfocándonos en las necesidades de nuestros clientes.</p>
                     </div>
                 </div>     
        </section>
@@ -72,7 +83,7 @@
             <!--Menu de Contacto-->
             <ul>
                 <li class="navItem">+11-123456789</li>
-                <li class="navItem">mail@gmail.com</li>
+                <li class="navItem">estudiozelido@gmail.com</li>
                 <li class="navItem">San Isidro, Buenos Aires</li>
             </ul>
         </nav> 
