--- a/index.html
+++ b/index.html
@@ -67,7 +67,10 @@
                 <a class="subTitle" href="Pages/servicios.html"><h2>Servicios Contables</h2></a>
             </div>
             <div class="cardBody">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit magnam debitis corrupti eum nam sed officiis, repudiandae omnis maiores ipsam fugiat blanditiis vero dolorem, modi reprehenderit incidunt accusamus ab voluptates!</p>
+                <p>La efectiva contabilidad y asesoría financiera son necesarias para el éxito de una organización innovadora y con visión de futuro. Para alcanzar los mayores beneficios de esta parte del negocio, usted necesitará contar con un equipo experimentado a su lado.
+                    Le brindamos nuestro conocimiento y experiencia para que usted pueda mantenerse concentrado en las actividades principales de su negocio.
+                    
+                    Nos basamos en números claramente estructurados para ofrecerle una visión general de su negocio, identificando debilidades y liberando su potencial de crecimiento.</p>
             </div>
         </div>     
     </section>
@@ -78,7 +81,8 @@
                 <a class="subTitle" href="Pages/nosotros.html"><h2>Nuestro Estudio</h2></a>
             </div>
             <div class="cardBody">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit magnam debitis corrupti eum nam sed officiis, repudiandae omnis maiores ipsam fugiat blanditiis vero dolorem, modi reprehenderit incidunt accusamus ab voluptates!</p>
+                <p>Somos un Estudio Contable Impositivo ubicado en San Isidro que brinda asesoramiento integral y personalizado en materia impositiva, laboral y contable para comercios, empresas y profesionales.
+                     Gracias a la continua capacitación de nuestro equipo de trabajo, excelente atención y honorarios accesibles brindamos un servicio de excelencia. Le brindamos la resolución de sus temas contables-impositivos de forma simple y rápida, ya que utilizamos todas las herramientas informáticas y vías de comunicación disponibles para la ejecución de cada trabajo.</p>
             </div>
         </div>     
     </section>
@@ -89,7 +93,7 @@
                 <a class="subTitle" href="Pages/contacto.html"><h2>Contactanos</h2></a>
             </div>
             <div class="cardBody">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit magnam debitis corrupti eum nam sed officiis, repudiandae omnis maiores ipsam fugiat blanditiis vero dolorem, modi reprehenderit incidunt accusamus ab voluptates!</p>
+                <p class="AlternativeText"> No dudes en ponerte en contacto con nosotros por teléfono al +11-123456789 donde nuestro equipo estará a disposición para ayudarte en tu consulta personal o coordinando una entrevista. También podes dejarnos tu consulta a través de nuestro formulario de Contacto. </p>
             </div>
         </div>       
     </section>
@@ -111,7 +115,7 @@
             <!--Menu de Contacto-->
             <ul>
                 <li class="navItem">+11-123456789</li>
-                <li class="navItem">mail@gmail.com</li>
+                <li class="navItem">estudiozelido@gmail.com</li>
                 <li class="navItem">San Isidro, Buenos Aires</li>
             </ul>
         </nav> 
