--- a/Pages/clientes.html
+++ b/Pages/clientes.html
@@ -3,9 +3,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="initial-scale=1">
+	<meta name="description" content="Sitio Oficial del Estudio Contable Impositivo Laboral y Tirbutario Zelido & Figueroa de la Vega ubicado en San Isidro Buenos Aires">
+	<meta name="keyword" content="Contabilidad, Monotributo, Estudio Contable">
     <title>EstudioZF</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <meta name="viewport" content="initial-scale=1">
     <link rel="stylesheet" href="../CSS/Style.css">
 </head>
 <body>
@@ -53,11 +55,47 @@
                     <h2>Nuestros Clientes</h2>
                 </div>
                 <div class="cardBody">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit magnam debitis corrupti eum nam sed officiis, repudiandae omnis maiores ipsam fugiat blanditiis vero dolorem, modi reprehenderit incidunt accusamus ab voluptates!</p>
+                    <p class="AlternativeText">Son el foco central de nuestro trabajo. Mediante una colaboración permanente conseguimos una relación fructífera y eficiente. Todos los clientes para los que trabajamos, independientemente de su tamaño, son únicos e igualmente importantes.
+                        Ser recomendados por un cliente es nuestro mayor orgullo. De esta forma, intentamos cada día satisfacer nuestra clientela.
+                        <br></br>
+                        Estudio Zelido & Figueroa cuenta con mas de 50 PYMES y cientos de clientes personales que confian en nosotros. 
+                        <br></br>
+                        Nos caracterizamos por la colaboración solidaria con distintas Fundaciones y Asociaciones a nivel nacional.
+                    
+                    </p>
                 </div>
-            </div>     
+                <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                      <div class="carousel-item active" >
+                        <img src="../Images/motnessori.png" class="d-block w-50px mx-auto"  alt="famm">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../Images/espartanos.jpg" class="d-block w-50px mx-auto" alt="espartanos">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../Images/totebag.jpg" class="d-block w-50px mx-auto" alt="totebag">
+                      </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Next</span>
+                    </button>
+                  </div>
+            </div>
+
+
+            
    </section>
     <!--Logos de los clientes -->
+
+ 
+
+
+
 </main>
 
 <footer>
@@ -72,7 +110,7 @@
             <!--Menu de Contacto-->
             <ul>
                 <li class="navItem">+11-123456789</li>
-                <li class="navItem">mail@gmail.com</li>
+                <li class="navItem">estudiozelido@gmail.com</li>
                 <li class="navItem">San Isidro, Buenos Aires</li>
             </ul>
         </nav> 
