--- a/Pages/contacto.html
+++ b/Pages/contacto.html
@@ -3,9 +3,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="initial-scale=1">
+	<meta name="description" content="Sitio Oficial del Estudio Contable Impositivo Laboral y Tirbutario Zelido & Figueroa de la Vega ubicado en San Isidro Buenos Aires">
+	<meta name="keyword" content="Contabilidad, Monotributo, Estudio Contable">
     <title>EstudioZF</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <meta name="viewport" content="initial-scale=1">
     <link rel="stylesheet" href="../CSS/Style.css">
 </head>
 <body>
@@ -125,7 +127,7 @@
             <!--Menu de Contacto-->
             <ul>
                 <li class="navItem">+11-123456789</li>
-                <li class="navItem">mail@gmail.com</li>
+                <li class="navItem">estudiozelido@gmail.com</li>
                 <li class="navItem">San Isidro, Buenos Aires</li>
             </ul>
         </nav> 
