--- a/Pages/servicios.html
+++ b/Pages/servicios.html
@@ -3,9 +3,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="initial-scale=1">
+	<meta name="description" content="Sitio Oficial del Estudio Contable Impositivo Laboral y Tirbutario Zelido & Figueroa de la Vega ubicado en San Isidro Buenos Aires">
+	<meta name="keyword" content="Contabilidad, Monotributo, Estudio Contable">
     <title>EstudioZF</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <meta name="viewport" content="initial-scale=1">
     <link rel="stylesheet" href="../CSS/Style.css">
 </head>
 <body>
@@ -56,10 +58,10 @@
             <section>
                 <div class="card">
                     <div class="subTitle">
-                        <h2>Personas Físicas</h2>
+                        <h2>Servicios Societarios</h2>
                     </div>
                     <div class="cardBody">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit magnam debitis corrupti eum nam sed officiis, repudiandae omnis maiores ipsam fugiat blanditiis vero dolorem, modi reprehenderit incidunt accusamus ab voluptates!</p>
+                        <p>Te acompañamos desde el inicio de tu proyecto asesorándote sobre las distintas alternativas para la constitución de sociedades o entes sin fines de lucro, analizando sus aspectos estratégicos, legales e impositivos. Te explicamos en detalle cuestiones relacionadas con las tareas administrativas, sus órganos de administración, de gobierno y representación, como deben funcionar y cuales son sus obligaciones sociales.</p>
                     </div>
                 </div>     
             </section>
@@ -67,10 +69,10 @@
             <section>
                 <div class="card">
                     <div class="subTitle">
-                        <h2>PYMES</h2>
+                        <h2>Servicios Impositivos</h2>
                     </div>
                     <div class="cardBody">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit magnam debitis corrupti eum nam sed officiis, repudiandae omnis maiores ipsam fugiat blanditiis vero dolorem, modi reprehenderit incidunt accusamus ab voluptates!</p>
+                        <p>Nos ocupamos de que tu empresa o emprendimiento cumpla con sus obligaciones fiscales en tiempo y forma. También te ayudamos a realizar tu planificación fiscal que te permitirá, no solo evitar inconvenientes en el cumplimiento de tus obligaciones, sino reducir tus costos impositivos al máximo posible dentro del marco legal y aprovechar los regímenes promocionales que beneficien a nuestros clientes.</p>
                     </div>
                 </div>     
             </section>
@@ -78,10 +80,10 @@
             <section>
                 <div class="card">
                     <div class="subTitle">
-                        <h2>Grandes Empresas</h2>
+                        <h2>Servicios Contables</h2>
                     </div>
                     <div class="cardBody">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit magnam debitis corrupti eum nam sed officiis, repudiandae omnis maiores ipsam fugiat blanditiis vero dolorem, modi reprehenderit incidunt accusamus ab voluptates!</p>
+                        <p>Estudio ZF te ofrece ser tu soporte administrativo/contable, que te permitirá llevar los registros económicos de tu empresa y libros contables al día. Nos proponemos trabajar a la par de nuestros clientes para que puedan desarrollar e implementar un sistema de información contable que les permita, no sólo conocer su situación patrimonial y el resultado de su inversión en cualquier momento sino además que lo puedan utilizar con una poderosa herramienta para la toma de decisiones y control de la gestión.</p>
                     </div>
                 </div>       
             </section>
@@ -89,10 +91,12 @@
             <section>
                 <div class="card">
                     <div class="subTitle">
-                        <h2>Gestiones</h2>
+                        <h2>Servicios Laborales</h2>
                     </div>
                     <div class="cardBody">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit magnam debitis corrupti eum nam sed officiis, repudiandae omnis maiores ipsam fugiat blanditiis vero dolorem, modi reprehenderit incidunt accusamus ab voluptates!</p>
+                        <p>Contamos con un asesoramiento integral en liquidación de sueldos y jornales, asegurando la confiabilidad de los datos y el respaldo permanente acerca de los cambios en materia legal (acuerdos salariales, convenios colectivos, leyes y jurisprudencia).
+                            Para ello, los profesionales y personal del área están capacitados, actualizados y atentos a las constantes innovaciones que en materia laboral se producen y que necesariamente son de aplicación en la administración de personal y la liquidación de haberes.
+                            </p>
                     </div>
                 </div>       
             </section>
@@ -114,7 +118,7 @@
             <!--Menu de Contacto-->
             <ul>
                 <li class="navItem">+11-123456789</li>
-                <li class="navItem">mail@gmail.com</li>
+                <li class="navItem">estudiozelido@gmail.com</li>
                 <li class="navItem">San Isidro, Buenos Aires</li>
             </ul>
         </nav> 
